@@ -55,6 +55,10 @@ public:
         const WebURL& sourceOrigin, const WebString& destinationProtocol,
         const WebString& destinationHost, bool allowDestinationSubdomains);
     WEBKIT_API static void resetOriginAccessWhiteLists();
+    
+    // Returns whether the url should be allowed to see the referrer
+    // based on their respective protocols.
+    WEBKIT_API static bool shouldHideReferrer(const WebURL& url, const WebString& referrer);
 
 private:
     WebSecurityPolicy();
